<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/detailLayoutLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stateNamePlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:textAllCaps="false"
        android:text="@string/stateNamePlaceholderHint"
        android:textColor="@color/placeholderColor"
        android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stateNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stateOverAllPopulationPlaceHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:text="@string/stateOverAllPopulationPlaceholderHint"
            android:textColor="@color/placeholderColor"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stateOverAllPopulationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberOfCountriesPlaceHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:text="@string/numberOfCountriesPlaceholderHint"
            android:textColor="@color/placeholderColor"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberOfCountriesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalCountryPopulationPlaceHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:text="@string/totalCountryPopulationPlaceHolderHint"
            android:textColor="@color/placeholderColor"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalCountryPopulationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalListOfCountryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:layout_marginTop="4dp"
            android:textColor="@color/grey"
            android:visibility="gone"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stateEqualCountriesTotalPlaceHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:text="@string/stateEqualCountriesTotalPlaceHolderHint"
            android:textColor="@color/placeholderColor"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stateEqualCountriesTotalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textAllCaps="false"
            android:visibility="gone"
            android:layout_marginTop="4dp"
            android:textColor="@color/grey"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>